--- a/app/src/main/res/layout/fragment_nutrition_general_tab.xml
+++ b/app/src/main/res/layout/fragment_nutrition_general_tab.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="viewmodel"
-            type="piotr.michalkiewicz.mealplannerclient.nutrition.viewmodel.NutritionScreenViewModel"/>
+            type="piotr.michalkiewicz.mealplannerclient.nutrition.viewmodel.NutirtionGeneralTabViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -106,7 +106,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="100"
-            android:progress="43"
+            android:progress="@{viewmodel::getGeneralProgressBarValue}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/energyProgressBarLabelTV" />
