--- a/app/src/main/res/layout/fragment_nutrition_general_tab.xml
+++ b/app/src/main/res/layout/fragment_nutrition_general_tab.xml
@@ -48,7 +48,7 @@
             android:background="@drawable/nutrition_progress_bar_shape"
             android:indeterminate="false"
             android:max="100"
-            android:progress="65"
+            android:progress="10"
             android:progressDrawable="@drawable/nutrition_circular_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -106,7 +106,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="100"
-            android:progress="@{viewmodel::getGeneralProgressBarValue}"
+            android:progress="@{viewmodel.uiModel.data.nutritionDailyData.dailyNutritionSummary.}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/energyProgressBarLabelTV" />
@@ -132,7 +132,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="100"
-            android:progress="32"
+            android:progress="10"
             android:progressDrawable="@drawable/protein_horizontal_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +158,7 @@
             android:layout_marginTop="2dp"
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
-            android:max="100"
+            android:max="10"
             android:progress="79"
             android:progressDrawable="@drawable/carbohydrates_horizontal_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -186,7 +186,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="100"
-            android:progress="8"
+            android:progress="10"
             android:progressDrawable="@drawable/fat_horizontal_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
