Implementing NutritonUiModel creation

--- a/app/src/main/res/layout/fragment_nutrition_general_tab.xml
+++ b/app/src/main/res/layout/fragment_nutrition_general_tab.xml
@@ -106,7 +106,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="100"
-            android:progress="@{viewmodel.uiModel.data.nutritionDailyData.dailyNutritionSummary.}"
+            android:progress="50"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/energyProgressBarLabelTV" />
