--- a/app/src/main/res/layout/fragment_nutrition_general_tab.xml
+++ b/app/src/main/res/layout/fragment_nutrition_general_tab.xml
@@ -48,7 +48,7 @@
             android:background="@drawable/nutrition_progress_bar_shape"
             android:indeterminate="false"
             android:max="100"
-            android:progress="10"
+            android:progress="0"
             android:progressDrawable="@drawable/nutrition_circular_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -106,7 +106,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="100"
-            android:progress="50"
+            android:progress="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/energyProgressBarLabelTV" />
@@ -132,7 +132,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="100"
-            android:progress="10"
+            android:progress="@{viewmodel.uiModel.data.nutrientsPercentages.get(`Vitamin C, total ascorbic acid`)}"
             android:progressDrawable="@drawable/protein_horizontal_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -159,7 +159,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="10"
-            android:progress="79"
+            android:progress="@{viewmodel.uiModel.data.nutrientsPercentages.get(`Carbohydrate, by difference`)}"
             android:progressDrawable="@drawable/carbohydrates_horizontal_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -186,7 +186,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="100"
-            android:progress="10"
+            android:progress="@{viewmodel.uiModel.data.nutrientsPercentages.get(`Fiber, total dietary`)}"
             android:progressDrawable="@drawable/fat_horizontal_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
