--- a/app/src/main/res/layout/fragment_nutrition_general_tab.xml
+++ b/app/src/main/res/layout/fragment_nutrition_general_tab.xml
@@ -132,7 +132,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="100"
-            android:progress="@{viewmodel.uiModel.data.nutrientsPercentages.get(`Vitamin C, total ascorbic acid`)}"
+            android:progress="@{viewmodel.uiModel.nutrientsPercentages.get(`Protein`)}"
             android:progressDrawable="@drawable/protein_horizontal_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -159,7 +159,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="10"
-            android:progress="@{viewmodel.uiModel.data.nutrientsPercentages.get(`Carbohydrate, by difference`)}"
+            android:progress="@{viewmodel.uiModel.nutrientsPercentages.get(`Carbohydrate, by difference`)}"
             android:progressDrawable="@drawable/carbohydrates_horizontal_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -186,7 +186,6 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="100"
-            android:progress="@{viewmodel.uiModel.data.nutrientsPercentages.get(`Fiber, total dietary`)}"
             android:progressDrawable="@drawable/fat_horizontal_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
