--- a/app/src/main/res/layout/fragment_nutrition_general_tab.xml
+++ b/app/src/main/res/layout/fragment_nutrition_general_tab.xml
@@ -2,8 +2,8 @@
 <layout>
     <data>
         <variable
-            name="viewmodel"
-            type="piotr.michalkiewicz.mealplannerclient.nutrition.viewmodel.NutritionGeneralTabViewModel" />
+            name="viewModel"
+            type="piotr.michalkiewicz.mealplannerclient.nutrition.viewmodel.NutritionSharedViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -132,7 +132,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="100"
-            android:progress="@{viewmodel.uiModel.data.nutrientsPercentages.get(`Protein`)}"
+            android:progress="@{viewModel.uiModelLiveData.data.nutrientsPercentages.get(`Protein`)}"
             android:progressDrawable="@drawable/protein_horizontal_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -159,7 +159,7 @@
             android:layout_marginEnd="16dp"
             android:indeterminate="false"
             android:max="10"
-            android:progress="@{viewmodel.uiModel.data.nutrientsPercentages.get(`Carbohydrate, by difference`)}"
+            android:progress="@{viewModel.uiModelLiveData.data.nutrientsPercentages.get(`Carbohydrate, by difference`)}"
             android:progressDrawable="@drawable/carbohydrates_horizontal_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
