--- a/app/src/main/res/layout/fragment_nutrition_screen.xml
+++ b/app/src/main/res/layout/fragment_nutrition_screen.xml
@@ -2,8 +2,8 @@
 <layout>
     <data>
         <variable
-            name="nutrition_data"
-            type="piotr.michalkiewicz.mealplannerclient.nutrition.model.NutritionUiModel" />
+            name="viewModel"
+            type="piotr.michalkiewicz.mealplannerclient.nutrition.viewmodel.NutritionSharedViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -23,7 +23,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/previousDayBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/opaque"
@@ -37,7 +37,7 @@
                 style="@style/normalTextBold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="8, October 2020"
+                android:text="DATE"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -45,10 +45,11 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                android:id="@+id/imageButton2"
+                android:id="@+id/nextDayBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/opaque"
+                android:onClick="@{() -> viewModel.increaseDateByOneDay()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/nutritionDateTV"
                 app:layout_constraintTop_toTopOf="parent"
